Update related to Instructor4j 2.0.0 release, Java 8 compatibility